# heen-en-terug-score-app

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/nl/k3n/raymond/heenenterug/: MainActivity.java
android/app/src/main/res/values/: strings.xml
patches/: bittorrent-tracker+11.1.2.patch
public/: game.proto  game_v2.proto  manifest.json
serializer/: Cargo.toml
serializer/src/: lib.rs
simulate/: Cargo.toml
simulate/src/: card.rs  game.rs  lib.rs  main.rs  simulation.rs
src/: App.svelte  app.css
src/lib/: BidRound.svelte  CardSelector.svelte  ConfigPage.svelte  Countdown.svelte  DisplayTrump.svelte  EditRound.svelte  Game.svelte  GameEdit.svelte  GameList.svelte  Leaderboard.svelte  Live.svelte  NewGame.svelte  NumberInput.svelte  PlayRound.svelte  ResultRound.svelte  Shared.svelte  Simulate.svelte  Stats.svelte  Trump.svelte  TrumpSelector.svelte  WinnerSplash.svelte  lib.js  lib.test.js  migrations.js  p2pt.js  store.js  ui.js
