[package]
name = "simulate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "simulate"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = [] }
wasm-bindgen = "0.2.93"
web-time = "1.1.0"
