[package]
name = "simulate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "simulate"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
web-time = "1.1.0"
